--- a/jsf-via-gatsby-custom/package.json
+++ b/jsf-via-gatsby-custom/package.json
@@ -1,13 +1,21 @@
 {
-  "name": "gatsby-starter-default",
-  "description": "Gatsby default starter",
+  "name": "jeffreyscottfrench.com",
+  "description": "Jeffrey Scott French",
   "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Jeffrey Scott French",
   "dependencies": {
+    "babel-plugin-styled-components": "^1.5.1",
+    "date-fns": "^1.29.0",
     "gatsby": "^1.9.241",
     "gatsby-link": "^1.6.39",
+    "gatsby-plugin-postcss-sass": "^1.0.19",
     "gatsby-plugin-react-helmet": "^2.0.8",
-    "react-helmet": "^5.2.0"
+    "gatsby-plugin-sass": "^1.0.25",
+    "gatsby-plugin-sitemap": "^1.2.10",
+    "gatsby-plugin-styled-components": "^2.0.4",
+    "gatsby-source-filesystem": "^1.5.14",
+    "react-helmet": "^5.2.0",
+    "styled-components": "^3.0.2"
   },
   "keywords": [
     "gatsby"
@@ -20,6 +28,24 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.11.1"
-  }
+    "babel-eslint": "^8.2.1",
+    "babel-preset-env": "^1.6.1",
+    "eslint": "^4.16.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-react": "^7.5.1",
+    "node-sass": "^4.8.3",
+    "prettier": "^1.11.1",
+    "sass-extract": "^2.1.0",
+    "sass-extract-js": "^0.3.0",
+    "sass-extract-loader": "^1.1.0"
+  },
+  "browserslist": [
+    "> 1%",
+    "IE >= 9",
+    "last 2 versions"
+  ]
 }
