--- a/jsf-via-gatsby-custom/package.json
+++ b/jsf-via-gatsby-custom/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-sitemap": "^1.2.10",
     "gatsby-plugin-styled-components": "^2.0.4",
     "gatsby-source-filesystem": "^1.5.14",
+    "node-sass-chokidar": "^1.2.2",
     "react-helmet": "^5.2.0",
     "styled-components": "^3.0.2"
   },
